# ablate

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: youtube_explainer.md
examples/: Notebook_Usages.ipynb  colab_prodgrade.ipynb  colab_prodgrade_demo.ipynb  colab_quickstart.ipynb
scripts/: make_explainer_charts.py
src/ablate/: __init__.py  cli.py  config.py  data.py  evaluate.py  extract.py  harness.py  hooks.py  hub.py  judges.py  model.py  optimize.py  pipeline.py  subspace.py  utils.py  weights.py
src/ablate/_data/: harmful.txt  harmless.txt
tests/: e2e_instruct.py  e2e_subspace_harness.py  smoke_gpt2.py
