[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ablate-llm"
version = "0.2.0"
description = "Directional ablation (abliteration) toolkit for open-source language models: extract, ablate, and optimize the removal of refusal / behavioral directions in the residual stream."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AI Anytime" }]
keywords = [
    "interpretability",
    "activation-engineering",
    "abliteration",
    "refusal-direction",
    "mechanistic-interpretability",
    "safety",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[project.urls]
Homepage = "https://github.com/AIAnytime/ablate"
Repository = "https://github.com/AIAnytime/ablate"
Issues = "https://github.com/AIAnytime/ablate/issues"
"Example model" = "https://huggingface.co/ai-anytime/qwen-1.5b-abliterated"

[project.optional-dependencies]
optimize = ["optuna>=3.4"]
datasets = ["datasets>=2.18"]
hub = ["huggingface_hub>=0.23"]
all = ["optuna>=3.4", "datasets>=2.18", "huggingface_hub>=0.23"]
dev = ["pytest>=7.4", "optuna>=3.4", "datasets>=2.18", "huggingface_hub>=0.23", "matplotlib>=3.7", "Pillow>=10.0"]

[project.scripts]
ablate = "ablate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ablate = ["_data/*.txt"]
